# eventsrc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  release.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: json_msg.rs  lib.rs  multiline.rs  setup.rs
crates/eventsrc-core/: Cargo.toml
crates/eventsrc-core/src/: builder.rs  error.rs  lib.rs  parser.rs  stream.rs
docs/: client.md  core.md  overview.md
eventsrc/: Cargo.toml
eventsrc-client/: Cargo.toml
eventsrc-client/src/: error.rs  lib.rs  oneshot.rs
eventsrc-client/src/replayable/: connector.rs  mod.rs  retry.rs
eventsrc-client/src/reqwest/: mod.rs  request.rs  response.rs
eventsrc-client/tests/: oneshot.rs  replayable.rs
eventsrc-core/: Cargo.toml
eventsrc-core/src/: builder.rs  event.rs  lib.rs  parser.rs  stream.rs
eventsrc/src/: error.rs  event.rs  lib.rs  parser.rs
