[workspace]
members = [
    "benchmarks",
    "eventsrc",
    "eventsrc-client",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
homepage = "https://github.com/koushiro/eventsrc"
repository = "https://github.com/koushiro/eventsrc"

[workspace.dependencies]
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"

eventsrc = { path = "eventsrc", version = "0.0.2" }
eventsrc-client = { path = "eventsrc-client", version = "0.0.2", default-features = false }
