[package]
name = "eventsrc-benchmarks"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
bytes = "1"
criterion = "0.8"
eventsource-stream = "0.2"
eventsrc-core = { workspace = true }
futures-util = "0.3"
http = "1"
sseer = { version = "0.2", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

[[bench]]
name = "json_msg"
path = "src/json_msg.rs"
harness = false

[[bench]]
name = "multiline"
path = "src/multiline.rs"
harness = false
