[package]
name = "eventsrc-benchmarks"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
bytes = { workspace = true }
criterion = "0.8"
eventsource-stream = "0.2"
eventsrc = { workspace = true }
futures-util = { workspace = true }
http = "1"
sse-core = { version = "0.2", features = ["stream"] }
sseer = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

[[bench]]
name = "json_msg"
path = "src/json_msg.rs"
harness = false

[[bench]]
name = "multiline"
path = "src/multiline.rs"
harness = false
