[package]
name = "eventsrc-client"
version = "0.0.2"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "One-shot and replayable SSE / EventSource client for Rust."
keywords = ["sse", "eventsource", "stream", "client"]
documentation = "https://docs.rs/eventsrc-client"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = "1"
backon = { version = "1", default-features = false, features = ["std", "tokio-sleep"] }
bytes = { workspace = true }
eventsrc = { workspace = true }
futures-core = { workspace = true }
reqwest = { version = "0.13", features = ["stream"], optional = true }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
futures-util = { workspace = true }
http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
