[package]
name = "eventsrc"
version = "0.0.1"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "A protocol-correct, transport-agnostic, SDK-friendly EventSource client for Rust."
keywords = ["sse", "eventsource", "stream", "client"]
documentation = "https://docs.rs/eventsrc"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reqwest"]
reqwest = ["eventsrc-client/reqwest"]

[dependencies]
eventsrc-client = { workspace = true }
eventsrc-core = { workspace = true }
