[package]
name = "eventsrc"
version = "0.0.2"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "Transport-agnostic SSE protocol parsing and stream adapters for Rust."
keywords = ["sse", "eventsource", "stream", "parser", "no_std"]
documentation = "https://docs.rs/eventsrc"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
memchr = "2"
pin-project-lite = "0.2"

[dev-dependencies]
futures-util = { workspace = true }
